--- a/cyjs-jupyter/js/package.json
+++ b/cyjs-jupyter/js/package.json
@@ -23,7 +23,8 @@
     "webpack": "^1.12.14"
   },
   "dependencies": {
-    "jupyter-js-widgets": "^1.1.1",
+    "cytoscape": "^2.7.10",
+    "jupyter-js-widgets": "^2.0.12",
     "underscore": "^1.8.3"
   }
 }
